เพิ่มข้อมูลส่วน main

--- a/index.html
+++ b/index.html
@@ -19,6 +19,33 @@
     </header>
 </head>
 <body>
+    <main>
+        <h1>สถานที่ท่องเที่ยวในจังหวัดเชียงใหม่</h1>
+    </main>
+    <section class="overview">
+        <p class="text-box">จังหวัดของเรามีประวัติศาสตร์ที่ยาวนาน และเป็นสถานที่ที่เต็มไปด้วยธรรมชาติและวัฒนธรรมที่งดงาม</p>
+       <p> <img src="https://www.chillpainai.com/src/wewakeup/scoop/images/d090cd4ebd626282fac20fd564b9099644c8db57.jpg" alt="ภาพรวมของจังหวัด" width="50%"></p>
+    </section>
+    <section class="highlights">
+        <div class="highlight-item">
+            <h2>ไฮไลท์สถานที่ท่องเที่ยว</h2>
+            <img src="https://www.chillpainai.com/src/wewakeup/scoop/images/2b95fcd4c02be63844d0d3f8425df81b9df8a802.jpg" alt="คลองแม่ข่า">
+            <h3>คลองแม่ข่า</h3>
+            <p>สถานที่บรรยากาศที่คล้ายกับริมคลองญี่ปุ่น รวมไปถึงร้านรวงริมคลองต่างก็ตกแต่งสไตล์ญี่ปุ่น</p>
+        </div>
+        <div class="highlight-item">
+            <h2>ไฮไลท์สถานที่ท่องเที่ยว</h2>
+            <img src="https://www.chillpainai.com/src/wewakeup/scoop/images/104090d1e72f96649ea64023e133dfc38d40d86c.jpg" alt="ประตูท่าแพ">
+            <h3>ประตูท่าแพ</h3>
+            <p>ประตูอิฐสีส้มที่ความสวยงาม เก่าแก่ และมีความขลัง ถ้าไม่ได้มาเช็กอินที่นี่ก็คงเหมือนมาไม่ถึงเชียงใหม่</p>
+        </div>
+        <div class="highlight-item">
+            <h2>ไฮไลท์สถานที่ท่องเที่ยว</h2>
+            <img src="https://res.cloudinary.com/pillarshotels/image/upload/f_auto/web/cms/resources/attractions/on-03-1500x1000-w1800h1360.jpeg" alt="วันนิมมาน">
+            <h3>วัน นิมมาน (One Nimman)</h3>
+            <p>แลนด์มาร์คยอดฮิตย่านนิมมาน แหล่งรวมความชิคที่ผสมผสานอัตลักษณ์ท้องถิ่นเชียงใหม่</p>
+        </div>
+    </section>
     
 </body>
 </html>
