--- a/index.html
+++ b/index.html
@@ -47,5 +47,9 @@
         </div>
     </section>
     
+    <footer>
+        <p>&copy; 2024 จังหวัดน่าเที่ยว | 66160253 Pathamaporn W.</p>
+    </footer>
+    
 </body>
 </html>
