--- a/about.html
+++ b/about.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>หน้ารายละเอียด - เที่ยวเชียงใหม่ปี 2567</title>
+<body>
+    <header>
+        <img src="https://i.gifer.com/1uK8.gif" alt="โลโก้" class="logo"> <!-- เพิ่มรูปโลโก้ -->
+        <nav>
+            <ul>
+                <li><a href="index.html" class="active">หน้าหลัก</a></li>
+                <li><a href="about.html"class="active">รายละเอียดสถานที่ท่องเที่ยว</a></li>
+                <li><a href="contact.html"class="active">ติดต่อ</a></li>
+            </ul>
+        </nav>
+    </header>
 </head>
 <body>
     
