--- a/about.html
+++ b/about.html
@@ -124,6 +124,8 @@
             </article>
         </section>
     </main>
-    
+    <footer>
+        <p>&copy; 2024 จังหวัดน่าเที่ยว | 66160253 Pathamaporn W.</p>
+    </footer>
 </body>
 </html>
