--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>หน้ารายละเอียด - เที่ยวเชียงใหม่ปี 2567</title>
+    <link rel="stylesheet" href="css/style.css">
 <body>
     <header>
         <img src="https://i.gifer.com/1uK8.gif" alt="โลโก้" class="logo"> <!-- เพิ่มรูปโลโก้ -->
