--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,94 @@
     </header>
 </head>
 <body>
-    
+    <main role="main">
+        <section class="message">
+          <h2>ส่งข้อความถึงเรา</h2>
+          <form
+            action="/submit"
+            method="POST"
+            role="form"
+            aria-label="แบบฟอร์มติดต่อ"
+          >
+            <table>
+              <tr>
+                <td><label for="fullname">ชื่อ-นามสกุล *</label></td>
+                <td>
+                  <input
+                    type="text"
+                    id="fullname"
+                    name="fullname"
+                    required
+                    aria-required="true"
+                    minlength="2"
+                    maxlength="100"
+                    aria-describedby="fullname-help"
+                  />
+                  <small id="fullname-help">กรุณากรอกชื่อและนามสกุลจริง</small>
+                </td>
+              </tr>
+              <tr>
+                <td><label for="email">อีเมล *</label></td>
+                <td>
+                  <input
+                    type="email"
+                    id="email"
+                    name="email"
+                    required
+                    aria-required="true"
+                    pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                    aria-describedby="email-help"
+                  />
+                  <small id="email-help">ตัวอย่าง: example@domain.com</small>
+                </td>
+              </tr>
+              <tr>
+                <td><label for="tel">เบอร์โทรศัพท์</label></td>
+                <td>
+                  <input
+                    type="tel"
+                    id="tel"
+                    name="tel"
+                    pattern="[0-9]{10}"
+                    aria-describedby="tel-help"
+                  />
+                  <small id="tel-help">กรอกหมายเลข 10 หลัก ไม่ต้องมีขีด เช่น 0812345678</small>
+                </td>
+              </tr>
+              <tr>
+                <td><label for="message">ข้อความ *</label></td>
+                <td>
+                  <textarea
+                    id="message"
+                    name="message"
+                    required
+                    aria-required="true"
+                    minlength="10"
+                    rows="5"
+                    aria-describedby="message-help"
+                  ></textarea>
+                  <small id="message-help">กรุณากรอกข้อความอย่างน้อย 10 ตัวอักษร</small>
+                </td>
+              </tr>
+              <tr>
+                <td colspan="2" style="text-align: center;">
+                  <button type="submit" aria-label="ส่งข้อความ">ส่งข้อความ</button>
+                </td>
+              </tr>
+            </table>
+          </form>
+        </section>
+        
+<section>
+    <h2>ติดต่อ</h2>
+    <div class="contact">
+      <p>
+        Email : 66160253@go.buu.ac.th
+        <br> Phone : 0930849148
+        <br> Ig : p_yeonaaee
+      </p>
+    </div>
+  </section>
+
 </body>
 </html>
