--- a/contact.html
+++ b/contact.html
@@ -108,5 +108,9 @@
     </div>
   </section>
 
+  <footer>
+    <p>&copy; 2024 จังหวัดน่าเที่ยว | 66160253 Pathamaporn W.</p>
+</footer>
+
 </body>
 </html>
